# videoTracker

./: .gitignore  CMakeLists.txt  README.md  monitor_performance.sh
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/phase1-baseline/: README.md
scripts/: add_shell_nodes.py  generate_uml_canvas.py  update_all_nodes.py  update_existing_canvas.py  update_node_titles.py
src/: AssetLibrary.cpp  AssetLibrary.h  AudioMixer.cpp  AudioMixer.h  AudioOutput.cpp  AudioOutput.h  CellWidget.cpp  CellWidget.h  Clock.cpp  Clock.h  ClockGUI.cpp  ClockGUI.h  ExpressionParser.cpp  MediaConverter.h  MediaPlayer.cpp  MediaPlayer.h  MediaPool.cpp  MediaPool.h  MediaPoolGUI.cpp  MediaPoolGUI.h  Module.h  ParameterCell.cpp  ParameterCell.h  ParameterSync.cpp  ParameterSync.h  Pattern.cpp  Pattern.h  TrackerSequencer.cpp  TrackerSequencer.h  TrackerSequencerGUI.cpp  TrackerSequencerGUI.h  VideoMixer.cpp  gui.src.txt  input.src.txt  main.cpp  ofApp.cpp  ofApp.h  videoTracker.src.txt
src/core/: AudioRouter.cpp  AudioRouter.h  Command.cpp  Command.h  CommandExecutor.cpp  CommandExecutor.h  ConnectionManager.cpp  ConnectionManager.h  Engine.cpp  Engine.h  EngineState.cpp  EngineState.h  Envelope.cpp  Envelope.h  EventRouter.cpp  EventRouter.h  ModuleFactory.cpp  ModuleFactory.h  ModuleRegistry.cpp  ModuleRegistry.h  ParameterDescriptor.h  ParameterPath.cpp  ParameterPath.h  ParameterRouter.cpp  ParameterRouter.h  PatternRuntime.cpp  PatternRuntime.h  ProjectManager.cpp  ProjectManager.h  ScriptManager.cpp  ScriptManager.h  SessionManager.cpp  SessionManager.h  VideoRouter.cpp  VideoRouter.h  VoiceManager.h  VoicePool.h
src/data/: Pattern.cpp  Pattern.h  PatternChain.cpp  (+1 more)
(+148 files in other folders)
